🐝 fix: align title on mobile via hack

--- a/src/components/Topbar/styles.styl
+++ b/src/components/Topbar/styles.styl
@@ -21,3 +21,7 @@
             line-height 1
             margin    0
             overflow hidden
+            position relative
+            // DIRTY why isn't the font correctly rendered
+            // vertically centered in the bounding box
+            top 2px
